# Asader_Mac_Chicken

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  design.md  proposal.md  pyproject.toml  requirements.txt  spec.md  tasks.md
alembic/: env.py
alembic/versions/: 20260701_0001_initial_schema.py  20260701_0002_add_telegram_update_id.py  20260701_0003_add_admin_order_fields.py  20260701_0003_add_selected_chicken_part.py  20260701_0004_add_admin_users.py  20260710_0005_expand_selected_chicken_part.py  20260711_0006_add_message_media_fields.py  20260711_0007_add_order_payment_proof_tracking.py  20260711_0008_add_admin_order_fields.py  20260712_0009_add_stock_controls.py  20260712_0010_refresh_drinks_and_addons_catalog.py  20260713_0011_add_fulfillment_type.py  20260714_0012_add_pending_order_state.py  20260719_0012_remove_public_bottle_and_icopor.py
app/: __init__.py  main.py
app/config/: __init__.py  logging.py  settings.py
app/modules/: __init__.py
app/shared/: __init__.py
private/delivery_zones/: README.md  amb_urban_delivery_zones.csv  amb_urban_delivery_zones.sql
scripts/: __init__.py  calibrate_delivery_rates.py  dev_redis_stub.py  local_dev.py  migrate.py  seed.py  sync_admin_backend.py  sync_admin_backend_bot_messages.py
tests/: __init__.py  test_health.py
tests/ai/: test_natural_language_interpretation.py
tests/application/: test_cart_checkout_use_cases.py  test_stock_controls.py
tests/conversations/: test_conversation_graph_transitions.py  test_session_mappers.py
tests/delivery/: test_map_based_delivery.py
(+195 files in other folders)
