[project]
# Packaging metadata only. Runtime dependencies live in requirements.txt so
# local installs use one dependency source.
name = "asadero-mc-bot-backend"
version = "0.1.0"
description = "Backend FastAPI para el bot de pedidos de ASADERO MC CHICKEN EXPRESS."
readme = "README.md"
requires-python = ">=3.9,<3.13"

[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Tests use pytest-asyncio auto mode because most application boundaries are async.
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
# Only application packages are installed. Alembic/scripts/tests stay as local
# project tooling and are invoked directly from the repository.
include = ["app*"]
exclude = ["alembic*", "scripts*", "tests*"]

[tool.ruff]
# Keep linting compatible with the oldest supported runtime.
line-length = 100
target-version = "py39"
